--- a/force-app/main/default/classes/ASF_QueueNotificationJob.cls
+++ b/force-app/main/default/classes/ASF_QueueNotificationJob.cls
@@ -1,13 +1,3 @@
-/**
- * @description       : 
- * @author            : rsinghnagar@salesforce.com
- * @group             : 
- * @last modified on  : 04-24-2024
- * @last modified by  : rsinghnagar@salesforce.com 
- * Modifications Log
- * Ver   Date         Author                       Modification
- * 1.0   04-24-2024   rsinghnagar@salesforce.com   Initial Version
-**/
 global class ASF_QueueNotificationJob implements Schedulable,Database.batchable<AggregateResult>{ 
     global Iterable<AggregateResult> start(Database.batchableContext info){ 
         return new ASF_QueueNotificationIterable(); 
@@ -17,7 +7,7 @@ global class ASF_QueueNotificationJob implements Schedulable,Database.batchable<
         system.debug('coming here');
     	Map<Id,AggregateResult> mResults = new Map<Id,AggregateResult>(s);
         
-        List<Case> scope = [SELECT Id, caseNumber, ownerId,Sub_Type_Text__c,Type_Text__c, Owner.type, Last_Owner_Change_Date__c,BusinessHoursId FROM Case WHERE OwnerId =: mResults.keySet() AND isClosed = false];
+        List<Case> scope = [SELECT Id, caseNumber, ownerId,Sub_Type_Text__c,Type_Text__c, Owner.type, Last_Owner_Change_Date__c,BusinessHoursId FROM Case wHERE OwnerId =: mResults.keySet()];
         //Business logic to send notification to Queue owner
         Map<String,List<String>> queueVsCaseLst = new Map<String,List<String>>();
         map<string,case> caseNumberRecordMap = new map<string,case>();
@@ -78,7 +68,7 @@ global class ASF_QueueNotificationJob implements Schedulable,Database.batchable<
             String qEmail = queueVsEmail.get(qId);
             String htmlBody = getTableEmailBody(caseLst,caseNumberRecordMap);
             Messaging.SingleEmailMessage mail = new Messaging.SingleEmailMessage();
-            mail.setSubject('Unassigned cases beyond TAT in Queue - '+queueIdQueueObject.get(qId));
+            mail.setSubject('Unassigned cases in Queue - '+queueIdQueueObject.get(qId));
             String templateBody = emailTemp.htmlvalue;
             templateBody = templateBody.replaceall('<Queue name>',queueIdQueueObject.get(qId));
             templateBody = templateBody.replaceall('ListofcasestoBeReplaced',htmlBody);
