--- a/force-app/main/default/classes/ABSLI_Constants.cls
+++ b/force-app/main/default/classes/ABSLI_Constants.cls
@@ -32,6 +32,7 @@ public class ABSLI_Constants {
     /** SERVICES NAME BELOW **/
     public static final String MobileUpdateSrvName = 'ContactUpdateApi';
     public static final String WHATSAPPOPTOUT_OPTIN_NAME = 'WHATSAPPOPTOUT_OPTINApi';
+    public static final String InstaIssuranceAPI = 'InstaIssuranceApi';
     public static final String PanUpdateSrvName = 'PanUpdateApi';
     public static final String BankEsbSrvName = 'BankESBService';
     public static final String AddressUpdateSrvName = 'Address Update';
@@ -76,7 +77,7 @@ public class ABSLI_Constants {
     public static final String BANKACCOUNTUPDATE_FAILURE_MESSAGE = 'ABSLI_BANKACCOUNTUPDATE_FAILURE_MESSAGE';
 
     /* PURPOSE OF ISSUANCE INTEGRATION **/
-    public static final String PURPOSEISSUANCE_SERVICE_NAME = 'poiUpdate';
+    public static final String PURPOSEISSUANCE_SERVICE_NAME = 'PurposeOfInsuanceApi';
     public static final String PURPOSEISSUANCE_EVALUATION_ERROR = 'ABSLI_PURPOSEISSUANCE_EVALUATION_ERROR';
     public static final String PURPOSEISSUANCE_SUCCESS_MESSAGE = 'ABSLI_PURPOSEISSUANCE_SUCCESS_MESSAGE';
     public static final String PURPOSEISSUANCE_FAILURE_MESSAGE = 'ABSLI_PURPOSEISSUANCE_FAILURE_MESSAGE';
@@ -91,9 +92,86 @@ public class ABSLI_Constants {
 
 	  /* REAL TIME INTEGRATION METADATA NAME */
 
+    /* LOAN ASSIGNMENT INTEGRATION **/
+    public static final String LOANASSIGNMENT_SERVICE_NAME = 'LoanAssignment';
+    public static final String LOANASSIGNMENT_CLI_ID = 'BSLILOAN';
+    public static final String LOANASSIGNMENT_SUB_CD = 'B';
+    public static final String LOANASSIGNMENT_ADDR_CD = 'PR';
+    public static final String LOANASSIGNMENT_CREATE_ASSIGNEE = 'N';
+    public static final String LOANASSIGNMENT_EVALUATION_ERROR = 'ABSLI_LOANASSIGNMENT_EVALUATION_ERROR';
+    public static final String LOANASSIGNMENT_SUCCESS_MESSAGE = 'ABSLI_LOANASSIGNMENT_SUCCESS_MESSAGE';
+    public static final String LOANASSIGNMENT_FAILURE_MESSAGE = 'ABSLI_LOANASSIGNMENT_FAILURE_MESSAGE';
+
+    /* LOAN REGISTER INTEGRATION **/
+    public static final String LOANREGISTER_SERVICE_NAME = 'registerLoan';
+    public static final String LOANREGISTER_STATE_CD = '1';
+    public static final String LOANREGISTER_EVALUATION_ERROR = 'ABSLI_LOANREGISTER_EVALUATION_ERROR';
+    public static final String LOANREGISTER_SUCCESS_MESSAGE = 'ABSLI_LOANREGISTER_SUCCESS_MESSAGE';
+    public static final String LOANREGISTER_FAILURE_MESSAGE = 'ABSLI_LOANREGISTER_FAILURE_MESSAGE';
+
+    /* LOAN APPROVAL INTEGRATION **/
+    public static final String LOANAPPROVAL_SERVICE_NAME = 'ApproveVoucherUpdate';
+    public static final String LOANAPPROVAL_USER_ID = 'MMSING1';
+    public static final String LOANAPPROVAL_ACTION = 'A';
+    public static final String LOANAPPROVAL_EVALUATION_ERROR = 'ABSLI_LOANAPPROVAL_EVALUATION_ERROR';
+    public static final String LOANAPPROVAL_SUCCESS_MESSAGE = 'ABSLI_LOANAPPROVAL_SUCCESS_MESSAGE';
+    public static final String LOANAPPROVAL_FAILURE_MESSAGE = 'ABSLI_LOANAPPROVAL_FAILURE_MESSAGE';
+    public static final String LOANAPPROVAL_DEFAULTCOMMENT_NONSTP = 'Case received as Non STP';
+    public static final String LOANAPPROVAL_DEFAULTCOMMENT_STP = 'Voucher not approved as amount is more than Rs. 1,00,000';
+    public static final Decimal LOANAPPROVAL_CUTOFFAMOUNT = 100000;
+
+    /* LOAN ASSIGNMENT INTEGRATION **/
+    public static final String LOANVOUCHERPROCESS_SCHEDULDE_JOB = 'Loan Voucher Process Schedulde Job';
+    public static final Integer LOANVOUCHERPROCESS_BATCH_SIZE = 10;
+    public static final String LOANVOUCHERPROCESS_SUBTYPE = 'Loan Payout';
+
+
+    /* NOMINEE UPDATE INTEGRATION */
+    public static final String DELETENOMINEE_SRV_NAME = 'NomineeDeleteApi';
+    public static final String DELETENOMINEE_EVALUATION_ERROR = 'ABSLI_DELETENOMINEE_EVALUTION_ERROR';
+    public static final String UPDATENOMINEE_SRV_NAME = 'NomineeUpdateApi';
+    public static final String UPDATENOMINEE_EVALUATION_ERROR = 'ABSLI_UPDATENOMINEE_EVALUTION_ERROR';
+    public static final String CREATENOMINEE_SRV_NAME = 'NomineeCreateApi';
+    public static final String CREATENOMINEE_EVALUATION_ERROR = 'ABSLI_CREATENOMINEE_EVALUTION_ERROR';
+
+	/* REAL TIME INTEGRATION METADATA NAME */
     public static final String PAN_VERIFICATION_INTEGRATION_METADATA = 'ABSLI_PAN_Verification';
     public static final String BANK_ESB_INTEGRATION_METADATA = 'ABSLI_Bank_ESB_Integration';
     public static final String FETCHPOLICY_ESB_INTEGRATION_METADATA = 'ABSLI_FETCH_POLICY_ESB';
 
+    /* IGMS OUTBOUND API */
+    public static final List<String> IGMS_COMPLAINT_CATEGORIES = new List<String>{'Complaint'};
+        public static final List<String> validGenders = new List<String>{'Male','Female','M','F'};
+            public static final List<String> RECEIPT_NO_REQ_COMP_TYPE_CD = new List<String>{'1','7'};
+    public static final String IGMS_REGCOMPLAINT_EVAL_ERROR = 'ABSLI_IGMSREGCOMPLAINT_EVAL_ERROR';
+    public static final String IGMS_ATTCOMPLAINT_EVAL_ERROR = 'ABSLI_IGMSATTCOMPLAINT_EVAL_ERROR';
+    public static final String IGMS_ATTESCCOMPLAINT_EVAL_ERROR = 'ABSLI_IGMSATTESCCOMPLAINT_EVAL_ERROR';
+    public static final String IGMS_REOPENEDCOMPLAINT_EVAL_ERROR = 'ABSLI_IGMSREOPCOMPLAINT_EVAL_ERROR';
+    public static final String IGMS_ESCALATECOMPLAINT_EVAL_ERROR = 'ABSLI_IGMSESCCOMPLAINT_EVAL_ERROR';
+    public static final String IGMS_REGCOMLPAINT_NEXT_INT  = 'ABSLI_AckIGMSComplaintIntegration';
+    public static final String IGMS_ACKCOMLPAINT_NEXT_INT  = 'ABSLI_PendingIGMSComplaintIntegration';
+    public static final String IGMS_REOPENEDCOMLPAINT_NEXT_INT  = 'ABSLI_ReopenedIGMSComplaintIntegration';
+    public static final String IGMS_REGCOMPLAINT_SRV_NAME = 'RegisterComplaints';
+    public static final String IGMS_ACKCOMPLAINT_SRV_NAME = 'UpdateComplaintsAck';
+    public static final String IGMS_PENDINGCOMPLAINT_SRV_NAME = 'UpdateComplaintsPending';
+    public static final String IGMS_ATTENDEDCOMPLAINT_SRV_NAME = 'UpdateComplaintsAttended';
+    public static final String IGMS_REOPENEDCOMPLAINT_SRV_NAME = 'UpdateComplaintsReopened';
+    public static final String IGMS_ATTENDEDESCCOMPLAINT_SRV_NAME = 'UpdateComplaintsAttendedEsc';
+    public static final String IGMS_CLOSEDCOMPLAINT_SRV_NAME = 'UpdateComplaintsClosed';
+    public static final String IGMS_ESCALATEDCOMPLAINT_SRV_NAME = 'UpdateComplaintsEscalated';
+    public static final String IGMS_DOWNLOADCOMPLAINT_SRV_NAME = 'UpdateComplaintsDownload';
+    public static final String IGMS_UPLOADCOMPLAINT_SRV_NAME = 'UpdateComplaintsUpload';
+    public static final String IGMS_REGCOMPLAINT_SUCCESS_RET_CD = '1';
+    public static final String IGMS_ACKCOMPLAINT_SUCCESS_RET_CD = '1';
+    public static final String IGMS_PENDCOMPLAINT_SUCCESS_RET_CD = '1';
+    public static final String IGMS_ESCALATEDCOMPLAINT_SUCCESS_RET_CD = '1';
+    public static final String IGMS_REOPENEDCOMPLAINT_SUCCESS_RET_CD = '1';
+    public static final String IGMS_CLOSEDCOMPLAINT_SUCCESS_RET_CD = '1';
+    public static final String IGMS_ATTENDEDCOMPLAINT_SUCCESS_RET_CD = '1';
+    public static final String IGMS_ATTENDEDESCCOMPLAINT_SUCCESS_RET_CD = '1';
+    public static final String[] IGMS_REGACKPEN_STATUS_CDS = new List<String>{'1','2','3'};
+    public static final String CLOSED_COMPLAINT_SCHEDULE_JOB = 'IGMS Closed Complaints Outbound Schedulde Job';
+    public static final String ABSLI_IGMSSYNC_SUCCESS_MESSAGE = 'ABSLI_IGMSSYNC_SUCCESS_MESSAGE';
+    public static final String ABSLI_IGMSSYNC_FAILURE_MESSAGE = 'ABSLI_IGMSSYNC_FAILURE_MESSAGE';
 
 }
